--- a/the-ambiance-incarnate-homepage.html
+++ b/the-ambiance-incarnate-homepage.html
@@ -8,6 +8,20 @@
   <h1>THE AMBIANCE</h1>
   <h2>Close Your Eyes and Imagine Paradice</h2>
 
+  <p>The amazing resort established in a corner of paradise.
+     right next to heaven its one corner where you want to be.</p>
+  <p>The thing you need to know is that without this amazing place,
+     the world will lack a thing or two.</p>
+
+  <p>Explore Our Website and Checkout:</p>
+    <ul>
+      <li>Accommodations</li>
+      <li>Activities</li>
+      <li>Travel arrangements</li>
+      <li>Pictures</li>
+      <li>Contact</li>
+    </ul>
+
 
 </body>
 
