this commit adds shell pages

--- a/the-ambiance-incarnate-homepage.html
+++ b/the-ambiance-incarnate-homepage.html
@@ -17,7 +17,7 @@
     <ul>
       <li>Accommodations</li>
       <li>Activities</li>
-      <li>Travel arrangements</li>
+      <li>Travel Arrangements</li>
       <li>Pictures</li>
       <li>Contact</li>
     </ul>
