this commit adds indention

--- a/the-ambiance-incarnate-homepage.html
+++ b/the-ambiance-incarnate-homepage.html
@@ -14,6 +14,8 @@
      the world will lack a thing or two.</p>
 
   <p>Explore Our Website and Checkout:</p>
+  <div class="home1">
+
     <ul>
       <li>Accommodations</li>
       <li>Activities</li>
@@ -21,6 +23,7 @@
       <li>Pictures</li>
       <li>Contact</li>
     </ul>
+  </div>
 
 
 </body>
