finishes the indipendent pages

--- a/accommodations.html
+++ b/accommodations.html
@@ -11,22 +11,26 @@
   <p>There are multiple accomodations on offer at the AMBEANCE.
   one needs only querry the univerce and a sure fit will avail itself</p>
   <p>
+  <div class="align">
     <ul>
       <li>Epiphany @ 2000Ksh</li>
       <li>Vision @ 4000Ksh</li>
       <li>Nirvana @ 8000Ksh</li>
     </ul>
+  </div>
   </p>
 
   <p>Explore Our Website and Checkout:</p>
-    <ul>
+  <div class="align">
+
+   <ul>
       <li>Accommodations</li>
       <li>Activities</li>
       <li>Travel Arrangements</li>
       <li>Pictures</li>
       <li>Contact</li>
     </ul>
-
+ </div>
 
 </body>
 
