--- a/activities.html
+++ b/activities.html
@@ -10,13 +10,17 @@
 
   <p>Activities For our Guests who we believe to be always Royal Include:</p>
   <p>
+  <div class="align">
     <ul>
       <li>The Sport of Kings Polo</li>
       <li>Horseback Riding</li>
       <li>Nature Walks</li>
     </ul>
+  </div>
 
   <p>Explore Our Website and Checkout:</p>
+  <div class="align">
+
     <ul>
       <li>Accommodations</li>
       <li>Activities</li>
@@ -24,6 +28,7 @@
       <li>Pictures</li>
       <li>Contact</li>
     </ul>
+  </div>
 
 
 </body>
