--- a/contacts.html
+++ b/contacts.html
@@ -10,13 +10,17 @@
 
   <p>For Booking and Further Inquiry Reach us Through</p>
   <p>
+  <div class="align">
+
     <ul>
       <li>Phone: +254 721 727675</li>
       <li>Email: iganeleo@gmail.com</li>
     </ul>
+  </div>
   </p>
 
   <p>Explore Our Website and Checkout:</p>
+  <div class="align">
     <ul>
       <li>Accommodations</li>
       <li>Activities</li>
@@ -24,6 +28,7 @@
       <li>Pictures</li>
       <li>Contact</li>
     </ul>
+  </div>
 
 
 </body>
