--- a/the-ambiance-incarnate-homepage.html
+++ b/the-ambiance-incarnate-homepage.html
@@ -14,7 +14,7 @@
      the world will lack a thing or two.</p>
 
   <p>Explore Our Website and Checkout:</p>
-  <div class="home1">
+  <div class="align">
 
     <ul>
       <li>Accommodations</li>
