--- a/pictures.html
+++ b/pictures.html
@@ -11,8 +11,14 @@
   <h3>THEY HAVE ATTAINED NIRVANAH</h3>
   <p>The thing you need to know is that without this amazing place,
      the world will lack a thing or two.</p>
+     <img src="images/accommodation.jpg" alt="Aphoto of a scenery">
+     <img src="images/activities.jpg" alt="Aphoto of a scenery">
+     <img src="images/contacts.jpg" alt="Aphoto of a scenery">
+     <img src="images/pictures.jpg" alt="Aphoto of a scenery">
+     <img src="images/the-ambiance-homepage.jpg" alt="Aphoto of a scenery">
 
   <p>Explore Our Website and Checkout:</p>
+  <div class="align">
     <ul>
       <li>Accommodations</li>
       <li>Activities</li>
@@ -20,7 +26,7 @@
       <li>Pictures</li>
       <li>Contact</li>
     </ul>
-
+  </div>
 
 </body>
 
