links all the pages together

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <div class="align">
 
     <ul>
-      <li>Accommodations</li>
-      <li>Activities</li>
-      <li>Travel Arrangements</li>
-      <li>Pictures</li>
-      <li>Contact</li>
+      <li><a href="accommodations.html">Accommodations</a></li>
+      <li><a href="activities.html">Activities</a></li>
+      <li><a href="pictures.html">Pictures</a></li>
+      <li><a href="contacts.html">Contact</a></li>
+      
     </ul>
   </div>
 
