--- a/accommodations.html
+++ b/accommodations.html
@@ -23,12 +23,12 @@
   <p>Explore Our Website and Checkout:</p>
   <div class="align">
 
-   <ul>
-      <li>Accommodations</li>
-      <li>Activities</li>
-      <li>Travel Arrangements</li>
-      <li>Pictures</li>
-      <li>Contact</li>
+    <ul>
+      <li><a href="accommodations.html">Accommodations</a></li>
+      <li><a href="activities.html">Activities</a></li>
+      <li><a href="pictures.html">Pictures</a></li>
+      <li><a href="contacts.html">Contact</a></li>
+      <li><a href="index.html">Home</a></li>
     </ul>
  </div>
 
