--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <title>The Ambiance</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
       <li><a href="activities.html">Activities</a></li>
       <li><a href="pictures.html">Pictures</a></li>
       <li><a href="contacts.html">Contact</a></li>
-      
+
     </ul>
   </div>
 
